# shm_cpp

./: CMakeLists.txt  LICENSE  README.md
include/: shm_segment.h
include/shm_cpp/: mpsc_queue.h  segment.h  spsc_queue.h
src/: example.cpp  mpsc_queue_example.cpp  segment_example.cpp  spsc_queue_example.cpp
